Some improvements: - Fix item's width in edit mode causes input field to jump into the second line - Restrict editMode for items with typeof value of number

--- a/magicsuggest.css
+++ b/magicsuggest.css
@@ -244,6 +244,10 @@
 .ms-sel-ctn .ms-sel-item .ms-close-btn:hover{
     background-position: 0 0;
 }
+.ms-sel-ctn .ms-sel-item .ms-editor-wrap input{
+	padding: 1px;
+    border: none;
+}
 .ms-helper{
     color: #AAA;
     font-size: 10px;
